--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -49,4 +50,8 @@ dependencies {
     // for Parcelable
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
+
+    // for refresh
+    compile 'com.android.support:support-v4:25.3.1'
+
 }
