--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,9 @@ dependencies {
     // for refresh
     compile 'com.android.support:support-v4:25.3.1'
 
+    // For character counts
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:design:25.2.0'
+    //compile 'com.android.support:appcompat-v7:25.2.0'
+
 }
