--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,23 +40,25 @@ dependencies {
     annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
-    compile 'com.codepath.libraries:android-oauth-handler:1.2.5'
+
+    // for Parcelable
+    
+
+    // for refresh
+    
+    // For character counts
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    //compile 'com.android.support:appcompat-v7:25.2.0'
+
+    compile "com.codepath.libraries:android-oauth-handler:1.2.5"
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-
-    // for Parcelable
     compile 'org.parceler:parceler-api:1.1.6'
-    annotationProcessor 'org.parceler:parceler:1.1.6'
-
-    // for refresh
     compile 'com.android.support:support-v4:25.3.1'
-
-    // For character counts
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:design:25.2.0'
-    //compile 'com.android.support:appcompat-v7:25.2.0'
-
+    annotationProcessor 'org.parceler:parceler:1.1.6'
 }
