--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,16 +42,17 @@ dependencies {
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
 
     // for Parcelable
-    
 
     // for refresh
-    
+
     // For character counts
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     //compile 'com.android.support:appcompat-v7:25.2.0'
 
-    compile "com.codepath.libraries:android-oauth-handler:1.2.5"
+    compile "com.android.support:appcompat-v7:25.3.1"
+    compile "com.android.support:recyclerview-v7:25.3.1"
+    compile 'com.codepath.libraries:android-oauth-handler:1.2.5'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
@@ -59,10 +60,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:percent:25.3.1'
     annotationProcessor 'org.parceler:parceler:1.1.6'
-    compile "com.android.support:appcompat-v7:25.3.1"
-    compile "com.android.support:design:25.3.1"
-    compile "com.android.support:recyclerview-v7:25.3.1"
-    compile "com.android.support:percent:25.3.1"
 }
